--- a/about/index.html
+++ b/about/index.html
@@ -1,95 +1,94 @@
 <!DOCTYPE html>
 <html lang="zxx">
-
-<head>
-    <meta charset="UTF-8" >
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
-    <title>About Us | Block Haven Real Estate</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>About Us | Sparkling Spaces, Smiling Faces.</title>
     <!-- favicon -->
     <link
       rel="apple-touch-icon"
       sizes="57x57"
       href="../assets/favicon/apple-icon-57x57.png"
-    >
+    />
     <link
       rel="apple-touch-icon"
       sizes="60x60"
       href="../assets/favicon/apple-icon-60x60.png"
-    >
+    />
     <link
       rel="apple-touch-icon"
       sizes="72x72"
       href="../assets/favicon/apple-icon-72x72.png"
-    >
+    />
     <link
       rel="apple-touch-icon"
       sizes="76x76"
       href="../assets/favicon/apple-icon-76x76.png"
-    >
+    />
     <link
       rel="apple-touch-icon"
       sizes="114x114"
       href="../assets/favicon/apple-icon-114x114.png"
-    >
+    />
     <link
       rel="apple-touch-icon"
       sizes="120x120"
       href="../assets/favicon/apple-icon-120x120.png"
-    >
+    />
     <link
       rel="apple-touch-icon"
       sizes="144x144"
       href="../assets/favicon/apple-icon-144x144.png"
-    >
+    />
     <link
       rel="apple-touch-icon"
       sizes="152x152"
       href="../assets/favicon/apple-icon-152x152.png"
-    >
+    />
     <link
       rel="apple-touch-icon"
       sizes="180x180"
       href="../assets/favicon/apple-icon-180x180.png"
-    >
+    />
     <link
       rel="icon"
       type="image/png"
       sizes="192x192"
       href="../assets/favicon/android-icon-192x192.png"
-    >
+    />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
       href="../assets/favicon/favicon-32x32.png"
-    >
+    />
     <link
       rel="icon"
       type="image/png"
       sizes="96x96"
       href="../assets/favicon/favicon-96x96.png"
-    >
+    />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
       href="../assets/favicon/favicon-16x16.png"
-    >
-    <link rel="manifest" href="../assets/favicon/manifest.json" >
-    <meta name="msapplication-TileColor" content="#ffffff" >
+    />
+    <link rel="manifest" href="../assets/favicon/manifest.json" />
+    <meta name="msapplication-TileColor" content="#ffffff" />
     <meta
       name="msapplication-TileImage"
       content="../assets/favicon/ms-icon-144x144.png"
-    >
-    <meta name="theme-color" content="#ffffff" >
+    />
+    <meta name="theme-color" content="#ffffff" />
     <!-- font awesome -->
-    <link rel="stylesheet" href="../libs/fontawesome/css/all.min.css" >
+    <link rel="stylesheet" href="../libs/fontawesome/css/all.min.css" />
     <!-- animate.css -->
-    <link rel="stylesheet" href="../libs/animate.css/animate.min.css" >
+    <link rel="stylesheet" href="../libs/animate.css/animate.min.css" />
     <!-- swiper js -->
-    <link rel="stylesheet" href="../libs/swiper/swiper-bundle.min.css" >
+    <link rel="stylesheet" href="../libs/swiper/swiper-bundle.min.css" />
     <!-- custom styles -->
-    <link rel="stylesheet" href="../styles/main.css" >
+    <link rel="stylesheet" href="../styles/main.css" />
   </head>
   <body class="page-about-us">
     <!--========= App Loader: START =========-->
@@ -118,7 +117,7 @@
                 alt="Block Haven Housing"
                 width="138"
                 height="48"
-              >
+              />
             </a>
             <button
               type="button"
@@ -136,9 +135,7 @@
                   <a href="/" class="nav-link">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a href="/properties/" class="nav-link"
-                    >Properties</a
-                  >
+                  <a href="/services/" class="nav-link">Services</a>
                 </li>
                 <li class="nav-item active">
                   <a href="/about/" class="nav-link">About</a>
@@ -181,8 +178,12 @@
                     class="section-desc wow animate__fadeInUp"
                     data-wow-duration="1s"
                   >
-                  At Blockhaven, we are more than a real estate company—we are architects of luxury living. With a passion for excellence and a dedication to creating extraordinary spaces, we specialize in crafting homes and communities that inspire, uplift, and stand the test of time.<br />
-                  We don’t just build properties; we build lifestyles. Every home we deliver is a testament to our vision of combining elegance, comfort, and functionality, designed to meet the diverse needs of our valued customers. At Blockhaven, your dream of elevated living starts here.
+                    At Sparkpro Cleaning Limited, we are more than a cleaning
+                    service—we are creators of clean, inspiring spaces. With a
+                    passion for excellence and a commitment to delivering
+                    extraordinary results, we specialize in transforming homes
+                    and workplaces into spotless, welcoming environments that
+                    uplift and inspire.<br />
                   </p>
                   <a
                     href="/contact"
@@ -204,14 +205,14 @@
                     alt="Hero Graphic"
                     width="626"
                     height="530"
-                  >
+                  />
                   <img
                     src="../assets/images/about-us/hero/hero-img.png"
                     alt="Hero Banner"
                     width="606"
                     height="458"
                     class="img-object"
-                  >
+                  />
                 </div>
               </div>
             </div>
@@ -242,7 +243,11 @@
                   class="section-desc wow animate__fadeInUp"
                   data-wow-duration="1s"
                 >
-                At Blockhaven, we specialize in delivering premium real estate solutions designed to meet the needs of our diverse clientele. Whether you’re looking to buy, sell, rent, or build your dream property, we’re here to guide you every step of the way.
+                  We don't just clean spaces; we enhance lifestyles. Every
+                  service we provide reflects our dedication to combining
+                  attention to detail, reliability, and personalized care to
+                  meet the unique needs of our customers. At Sparkpro, your
+                  journey to a cleaner, brighter space begins here.
                 </p>
               </div>
             </div>
@@ -314,9 +319,10 @@
                       />
                     </svg>
                   </span>
-                  <h3 class="h5">Buy Properties</h3>
+                  <h3 class="h5">Residential Cleaning</h3>
                   <p class="what-we-do-desc">
-                    Discover an exclusive collection of luxury estates and complexes that redefine elegance and comfort. Our curated listings feature homes in prime locations, tailored to match your lifestyle and aspirations.
+                    Make your home shine with our expert residential cleaning
+                    services, tailored to keep your space fresh and inviting.
                   </p>
                 </div>
               </div>
@@ -443,9 +449,11 @@
                       />
                     </svg>
                   </span>
-                  <h3 class="h5">Selling Properties</h3>
+                  <h3 class="h5">Commercial Cleaning</h3>
                   <p class="what-we-do-desc">
-                    We make selling your property effortless and rewarding. Our expert team employs market insights and strategic marketing to ensure you get the best value for your investment.
+                    Keep your business spotless with our reliable commercial
+                    cleaning services, ensuring a professional and welcoming
+                    environment.
                   </p>
                 </div>
               </div>
@@ -668,9 +676,10 @@
                       />
                     </svg>
                   </span>
-                  <h3 class="h5">Rent Apartments</h3>
+                  <h3 class="h5">Specialized Cleaning</h3>
                   <p class="what-we-do-desc">
-                    Looking for a short-term stay or a long-term rental? We offer a range of premium apartments equipped with modern amenities and situated in desirable locations to suit your needs.
+                    From carpets to post-construction, we tackle tough cleaning
+                    jobs, leaving your space spotless and refreshed.
                   </p>
                 </div>
               </div>
@@ -752,9 +761,10 @@
                       </defs>
                     </svg>
                   </span>
-                  <h3 class="h5">Constructions</h3>
+                  <h3 class="h5">Maintenance Services</h3>
                   <p class="what-we-do-desc">
-                    Dreaming of building your ideal home? Our team partners with leading architects and builders to bring your vision to life with state-of-the-art designs and sustainable construction practices.
+                    We handle laundry, trash removal, and air dust cleaning,
+                    helping maintain a clean and organized space.
                   </p>
                 </div>
               </div>
@@ -864,9 +874,10 @@
                       </defs>
                     </svg>
                   </span>
-                  <h3 class="h5">Customization Support</h3>
+                  <h3 class="h5">Eco-Friendly Cleaning</h3>
                   <p class="what-we-do-desc">
-                    Your home should reflect your unique style and preferences. We provide customization services to help you tailor your space, ensuring every detail aligns with your vision.
+                    Our eco-friendly cleaning services use safe, sustainable
+                    products to protect your health and the environment.
                   </p>
                 </div>
               </div>
@@ -933,9 +944,10 @@
                       />
                     </svg>
                   </span>
-                  <h3 class="h5">Best Client Mangement</h3>
+                  <h3 class="h5">Exceptional Customer Care</h3>
                   <p class="what-we-do-desc">
-                    Our commitment to exceptional customer service sets us apart. From personalized consultations to post-sale support, we prioritize your satisfaction at every stage of your real estate journey.
+                    We prioritize your satisfaction, offering personalized
+                    cleaning solutions and reliable service at every step.
                   </p>
                 </div>
               </div>
@@ -967,7 +979,7 @@
                   height="66"
                   alt="Featured Brand"
                   class="img-fluid"
-                >
+                />
               </a>
               <a href="#" class="featured-brands-item">
                 <img
@@ -976,7 +988,7 @@
                   height="66"
                   alt="Featured Brand"
                   class="img-fluid"
-                >
+                />
               </a>
               <a href="#" class="featured-brands-item">
                 <img
@@ -985,7 +997,7 @@
                   height="66"
                   alt="Featured Brand"
                   class="img-fluid"
-                >
+                />
               </a>
               <a href="#" class="featured-brands-item">
                 <img
@@ -994,7 +1006,7 @@
                   height="66"
                   alt="Featured Brand"
                   class="img-fluid"
-                >
+                />
               </a>
               <a href="#" class="featured-brands-item">
                 <img
@@ -1003,7 +1015,7 @@
                   height="66"
                   alt="Featured Brand"
                   class="img-fluid"
-                >
+                />
               </a>
               <a href="#" class="featured-brands-item">
                 <img
@@ -1012,7 +1024,7 @@
                   height="66"
                   alt="Featured Brand"
                   class="img-fluid"
-                >
+                />
               </a>
             </div>
             <div
@@ -1020,11 +1032,11 @@
               data-wow-duration="1s"
             >
               <a
-                href="#"
+                href="/contact/"
                 class="btn btn-lg btn-primary"
-                title="Download our Brochure"
+                title="Get a Full Quote"
               >
-                Download our Brochure
+                Get a Full Quote
               </a>
             </div>
           </div>
@@ -1034,17 +1046,21 @@
       <!--========= Main Sections: END =========-->
 
       <!--========= Footer Main: START =========-->
-      <footer class="footer-main wow animate__fadeInUp mt-20" data-wow-duration="1s">
+      <footer
+        class="footer-main wow animate__fadeInUp mt-20"
+        data-wow-duration="1s"
+      >
         <!--========= Footer Widgets: START =========-->
         <section class="footer-widgets">
           <div class="container">
             <div class="grid">
-              <div class="grid-item">
+              <div
+                class="grid-item wow animate__fadeInUp"
+                data-wow-duration="1s"
+              >
                 <h2 class="h4 text-uppercase">About Us</h2>
                 <p class="footer-text">
-                  Block Haven is committed to delivering a high level of expertise,
-                  customer service, and attention to detail to the marketing and
-                  sales of luxury real estate, and rental properties.
+                  Sparkpro Cleaning Limited delivers expert care, exceptional service, and meticulous attention to detail for every cleaning task—residential, commercial, or specialized.
                 </p>
                 <ul class="list-social">
                   <li>
@@ -1069,7 +1085,10 @@
                   </li>
                 </ul>
               </div>
-              <div class="grid-item">
+              <div
+                class="grid-item wow animate__fadeInUp"
+                data-wow-duration="1s"
+              >
                 <h2 class="h4 text-uppercase">Contact</h2>
                 <ul class="list-contact">
                   <li>
@@ -1078,57 +1097,29 @@
                     </address>
                   </li>
                   <li>
-                    <a href="tel:+19342185862">+1934-218-5862</a>
+                    <a href="tel:+19342185862">+1934 218 5862</a>
                   </li>
                   <li>
-                    <a href="mailto:info@blockchainminersx.online"
-                      >info@blockchainminersx.online</a
+                    <a href="mailto:info@sparkpro.co.uk"
+                      >info@sparkpro.co.uk</a
                     >
                   </li>
                 </ul>
               </div>
-              <div class="grid-item">
-                <h2 class="h4 text-uppercase">Popular Properties</h2>
-                <ul class="list-property">
+              <div
+                class="grid-item wow animate__fadeInUp"
+                data-wow-duration="1s"
+              >
+                <h2 class="h4 text-uppercase">Popular Services</h2>
+                <ul class="list-contact">
                   <li>
-                    <a
-                      href="property-details.html"
-                      aria-label="Property Detils Link"
-                      class="list-property-item"
-                    >
-                      <div class="img-wrapper">
-                        <img
-                          src="../assets/images/footer/property-img.png"
-                          width="86"
-                          height="78"
-                          alt=""
-                        >
-                      </div>
-                      <div>
-                        <h5 class="h5">Amazing Furnished Apartment's</h5>
-                        <p class="property-price">$15000.00</p>
-                      </div>
-                    </a>
+                    <a href="/contact/">Event cleaning</a>
                   </li>
                   <li>
-                    <a
-                      href="property-details.html"
-                      aria-label="Property Detils Link"
-                      class="list-property-item"
-                    >
-                      <div class="img-wrapper">
-                        <img
-                          src="../assets/images/footer/property-img.png"
-                          width="86"
-                          height="78"
-                          alt=""
-                        >
-                      </div>
-                      <div>
-                        <h5 class="h5">Amazing Furnished Apartment's</h5>
-                        <p class="property-price">$15000.00</p>
-                      </div>
-                    </a>
+                    <a href="/contact/">Pet cleaning</a>
+                  </li>
+                  <li>
+                    <a href="/contact/">Organisation cleaning</a>
                   </li>
                 </ul>
               </div>
@@ -1156,5 +1147,4 @@
     <!-- custom scripts -->
     <script src="../scripts/main.js"></script>
   </body>
-
 </html>
