--- a/contact/index.html
+++ b/contact/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact Us | Block Haven Real Estate</title>
+    <title>Contact Us | Sparkling Spaces, Smiling Faces.</title>
     <!-- favicon -->
     <link
       rel="apple-touch-icon"
@@ -135,7 +135,7 @@
                   <a href="/" class="nav-link">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a href="/properties/" class="nav-link">Properties</a>
+                  <a href="/services/" class="nav-link">Services</a>
                 </li>
                 <li class="nav-item">
                   <a href="/about/" class="nav-link">About</a>
@@ -457,8 +457,8 @@
                     <div>
                       <h4 class="h5">Chat With Agent!</h4>
                       <p class="contact-info-desc">
-                        Our Real-estate Company Agent will help you for any type
-                        of properties information very smoothly.
+                        Our Company Agent will help you for any type
+                        of services you want.
                       </p>
                     </div>
                   </div>
@@ -505,14 +505,14 @@
                     <div>
                       <h4 class="h5">Contact By</h4>
                       <p class="contact-info-desc">
-                        <a href="mailto:info@blockchainminersx.online">
-                          info@blockchainminersx.online
+                        <a href="mailto:info@sparkpro.co.uk">
+                          info@sparkpro.co.uk
                         </a>
                         <a
-                          href="mailto:sales@blockchainminersx.online
+                          href="mailto:info@sparkpro.co.uk
                           "
                         >
-                          sales@blockchainminersx.online
+                          info@sparkpro.co.uk
                         </a>
                         <a href="tel:+19342185862"> Sales: +1934-218-5862 </a>
                       </p>
@@ -573,13 +573,13 @@
         <section class="footer-widgets">
           <div class="container">
             <div class="grid">
-              <div class="grid-item">
+              <div
+                class="grid-item wow animate__fadeInUp"
+                data-wow-duration="1s"
+              >
                 <h2 class="h4 text-uppercase">About Us</h2>
                 <p class="footer-text">
-                  Block Haven is committed to delivering a high level of
-                  expertise, customer service, and attention to detail to the
-                  marketing and sales of luxury real estate, and rental
-                  properties.
+                  Sparkpro Cleaning Limited delivers expert care, exceptional service, and meticulous attention to detail for every cleaning task—residential, commercial, or specialized.
                 </p>
                 <ul class="list-social">
                   <li>
@@ -604,7 +604,10 @@
                   </li>
                 </ul>
               </div>
-              <div class="grid-item">
+              <div
+                class="grid-item wow animate__fadeInUp"
+                data-wow-duration="1s"
+              >
                 <h2 class="h4 text-uppercase">Contact</h2>
                 <ul class="list-contact">
                   <li>
@@ -613,57 +616,29 @@
                     </address>
                   </li>
                   <li>
-                    <a href="tel:+19342185862">+1934-218-5862</a>
+                    <a href="tel:+19342185862">+1934 218 5862</a>
                   </li>
                   <li>
-                    <a href="mailto:info@blockchainminersx.online"
-                      >info@blockchainminersx.online</a
+                    <a href="mailto:info@sparkpro.co.uk"
+                      >info@sparkpro.co.uk</a
                     >
                   </li>
                 </ul>
               </div>
-              <div class="grid-item">
-                <h2 class="h4 text-uppercase">Popular Properties</h2>
-                <ul class="list-property">
+              <div
+                class="grid-item wow animate__fadeInUp"
+                data-wow-duration="1s"
+              >
+                <h2 class="h4 text-uppercase">Popular Services</h2>
+                <ul class="list-contact">
                   <li>
-                    <a
-                      href="property-details.html"
-                      aria-label="Property Detils Link"
-                      class="list-property-item"
-                    >
-                      <div class="img-wrapper">
-                        <img
-                          src="../assets/images/footer/property-img.png"
-                          width="86"
-                          height="78"
-                          alt=""
-                        />
-                      </div>
-                      <div>
-                        <h5 class="h5">Amazing Furnished Apartment's</h5>
-                        <p class="property-price">$15000.00</p>
-                      </div>
-                    </a>
+                    <a href="/contact/">Event cleaning</a>
                   </li>
                   <li>
-                    <a
-                      href="property-details.html"
-                      aria-label="Property Detils Link"
-                      class="list-property-item"
-                    >
-                      <div class="img-wrapper">
-                        <img
-                          src="../assets/images/footer/property-img.png"
-                          width="86"
-                          height="78"
-                          alt=""
-                        />
-                      </div>
-                      <div>
-                        <h5 class="h5">Amazing Furnished Apartment's</h5>
-                        <p class="property-price">$15000.00</p>
-                      </div>
-                    </a>
+                    <a href="/contact/">Pet cleaning</a>
+                  </li>
+                  <li>
+                    <a href="/contact/">Organisation cleaning</a>
                   </li>
                 </ul>
               </div>
