--- a/about/index.html
+++ b/about/index.html
@@ -957,7 +957,7 @@
         <!--========= What We Do: END =========-->
 
         <!--========= At A Glance: START =========-->
-        <section class="at-a-glance section">
+        <!-- <section class="at-a-glance section">
           <div class="container">
             <p
               class="section-tagline wow animate__fadeInUp"
@@ -1040,7 +1040,7 @@
               </a>
             </div>
           </div>
-        </section>
+        </section> -->
         <!--========= At A Glance: END =========-->
       </main>
       <!--========= Main Sections: END =========-->
@@ -1131,7 +1131,7 @@
         <!--========= Footer Copyright: START =========-->
         <div class="footer-copyright">
           <div class="container">
-            <p>Copyright Block Haven Real Estate. All Rights Reserved.</p>
+            <p>Copyright Sparkpro Cleaning Limited. All Rights Reserved.</p>
           </div>
         </div>
         <!--========= Footer Copyright: END =========-->
