--- a/services/index.html
+++ b/services/index.html
@@ -189,7 +189,7 @@
                       data-wow-duration="1s"
                     >
                       <img
-                        src="../assets/images/property-listing/hero/hero-img-md.png"
+                        src="../assets/8.jpg"
                         alt="Gallery"
                         width="134"
                         height="90"
@@ -201,7 +201,7 @@
                       data-wow-duration="1.2s"
                     >
                       <img
-                        src="../assets/images/property-listing/hero/hero-img-sm.png"
+                        src="../assets/5.jpg"
                         alt="Gallery"
                         width="134"
                         height="90"
@@ -266,7 +266,7 @@
                       <div class="explore-properties-thumbnail">
                         <a href="/contact/">
                           <img
-                            src="../assets/images/property-details/luxurious-farmhouse/img1.webp"
+                            src="../assets/images/property-details/end-of-tenancy.webp"
                             width="356"
                             height="234"
                             alt="Property"
@@ -310,7 +310,7 @@
                       <div class="explore-properties-thumbnail">
                         <a href="/contact/">
                           <img
-                            src="../assets/images/property-details/charms/img1.webp"
+                            src="../assets/images/property-details/commercial-cleaning.jpg"
                             width="356"
                             height="234"
                             alt="Property"
@@ -354,7 +354,7 @@
                       <div class="explore-properties-thumbnail">
                         <a href="/contact/">
                           <img
-                            src="../assets/images/property-details/exclusive-fairytale-castle/img1.webp"
+                            src="../assets/images/property-details/post-build-cleaning.webp"
                             width="356"
                             height="234"
                             alt="Property"
@@ -414,7 +414,7 @@
                       <div class="explore-properties-thumbnail">
                         <a href="/contact/">
                           <img
-                            src="../assets/images/property-details/apolonya/img1.webp"
+                            src="../assets/images/property-details/carpet_cleaning.webp"
                             width="356"
                             height="234"
                             alt="Property"
@@ -455,7 +455,7 @@
                       <div class="explore-properties-thumbnail">
                         <a href="/contact/">
                           <img
-                            src="../assets/images/property-details/nireides/img1.webp"
+                            src="../assets/images/property-details/window-cleaning.jpg"
                             width="356"
                             height="234"
                             alt="Property"
@@ -499,7 +499,7 @@
                       <div class="explore-properties-thumbnail">
                         <a href="/contact/">
                           <img
-                            src="../assets/images/property-details/luxurious-farmhouse/img1.webp"
+                            src="../assets/images/property-details/eco-friendly.webp"
                             width="356"
                             height="234"
                             alt="Property"
@@ -543,7 +543,7 @@
                       <div class="explore-properties-thumbnail">
                         <a href="/contact/">
                           <img
-                            src="../assets/images/property-details/charms/img1.webp"
+                            src="../assets/images/property-details/disinfection.webp"
                             width="356"
                             height="234"
                             alt="Property"
@@ -587,7 +587,7 @@
                       <div class="explore-properties-thumbnail">
                         <a href="/contact/">
                           <img
-                            src="../assets/images/property-details/exclusive-fairytale-castle/img1.webp"
+                            src="../assets/images/property-details/upholstery.jpg"
                             width="356"
                             height="234"
                             alt="Property"
@@ -647,7 +647,7 @@
                       <div class="explore-properties-thumbnail">
                         <a href="/contact/">
                           <img
-                            src="../assets/images/property-details/phoenix/img1.webp"
+                            src="../assets/images/property-details/trash.jpg"
                             width="356"
                             height="234"
                             alt="Property"
@@ -691,7 +691,7 @@
                       <div class="explore-properties-thumbnail">
                         <a href="/contact/">
                           <img
-                            src="../assets/images/property-details/luxurious-farmhouse/img1.webp"
+                            src="../assets/images/property-details/air-duct-cleaning.jpeg"
                             width="356"
                             height="234"
                             alt="Property"
@@ -735,7 +735,7 @@
                       <div class="explore-properties-thumbnail">
                         <a href="/contact/">
                           <img
-                            src="../assets/images/property-details/charms/img1.webp"
+                            src="../assets/images/property-details/organisation.jpg"
                             width="356"
                             height="234"
                             alt="Property"
@@ -779,7 +779,7 @@
                       <div class="explore-properties-thumbnail">
                         <a href="/contact/">
                           <img
-                            src="../assets/images/property-details/exclusive-fairytale-castle/img1.webp"
+                            src="../assets/images/property-details/linen-cleaning.png"
                             width="356"
                             height="234"
                             alt="Property"
@@ -839,7 +839,7 @@
                       <div class="explore-properties-thumbnail">
                         <a href="/contact/">
                           <img
-                            src="../assets/images/property-details/phoenix/img1.webp"
+                            src="../assets/images/property-details/pet.jpg"
                             width="356"
                             height="234"
                             alt="Property"
@@ -883,7 +883,7 @@
                       <div class="explore-properties-thumbnail">
                         <a href="/contact/">
                           <img
-                            src="../assets/images/property-details/apolonya/img1.webp"
+                            src="../assets/images/property-details/short-rental.jpg"
                             width="356"
                             height="234"
                             alt="Property"
@@ -924,7 +924,7 @@
                       <div class="explore-properties-thumbnail">
                         <a href="/contact/">
                           <img
-                            src="../assets/images/property-details/nireides/img1.webp"
+                            src="../assets/images/property-details/event.jpg"
                             width="356"
                             height="234"
                             alt="Property"
@@ -1066,7 +1066,7 @@
         <!--========= Footer Copyright: START =========-->
         <div class="footer-copyright">
           <div class="container">
-            <p>Copyright Block Haven Real Estate. All Rights Reserved.</p>
+            <p>Copyright Sparkpro Cleaning Limited. All Rights Reserved.</p>
           </div>
         </div>
         <!--========= Footer Copyright: END =========-->
