--- a/property/luxurious-farmhouse/index.html
+++ b/property/luxurious-farmhouse/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" >
     <meta name="viewport" content="width=device-width, initial-scale=1.0" >
-    <title>Luxurious 18th C. Farmhouse Property Detials | Block Haven Real Estate</title>
+    <title>Luxurious 18th C. Farmhouse Property Detials | Sparkpro Cleaning Limited</title>
     <!-- favicon -->
     <link
       rel="apple-touch-icon"
