--- a/contact/index.html
+++ b/contact/index.html
@@ -247,7 +247,7 @@
                   <input
                     type="hidden"
                     name="subject"
-                    value="-- New Estate Quote Request --"
+                    value="-- New Cleaning Quote Request --"
                   />
                   <div class="mb-3">
                     <div id="success-message" class="d-none"></div>
