--- a/index.html
+++ b/index.html
@@ -1652,6 +1652,7 @@
                           id="name"
                           class="form-control"
                           placeholder="Full Name"
+                          required
                         />
                       </div>
                       <div class="form-group">
@@ -1662,6 +1663,7 @@
                           id="email"
                           class="form-control"
                           placeholder="Email Address"
+                          required
                         />
                       </div>
                       <div class="form-group">
@@ -1672,6 +1674,7 @@
                           id="phone"
                           class="form-control"
                           placeholder="Phone Number"
+                          required
                         />
                       </div>
                       <div class="form-group">
@@ -1682,6 +1685,7 @@
                           name="serviceType"
                           id="serviceType"
                           class="form-select"
+                          required
                         >
                           <option value="0" hidden selected>
                             Select Service
@@ -1737,6 +1741,7 @@
                           rows="3"
                           placeholder="Your Message"
                           class="form-control"
+                          required
                         ></textarea>
                       </div>
                       <button
