--- a/contact/index.html
+++ b/contact/index.html
@@ -268,6 +268,7 @@
                         id="name"
                         class="form-control"
                         placeholder="Enter Your Name"
+                        required
                       />
                     </div>
                   </div>
@@ -282,6 +283,7 @@
                         id="email"
                         class="form-control"
                         placeholder="Enter Your Email"
+                        required
                       />
                     </div>
                   </div>
@@ -294,6 +296,7 @@
                         id="subject"
                         class="form-control"
                         placeholder="Enter Subject"
+                        required
                       />
                     </div>
                   </div>
@@ -306,6 +309,7 @@
                         name="serviceType"
                         id="serviceType"
                         class="form-select"
+                        required
                       >
                         <option value="0" hidden selected>
                           Select Service
@@ -363,6 +367,7 @@
                         rows="4"
                         class="form-control"
                         placeholder="Write your message - please specify the property you're interested in.."
+                        required
                       ></textarea>
                     </div>
                   </div>
