Update Address in Contact Page

--- a/contact/index.html
+++ b/contact/index.html
@@ -590,9 +590,7 @@
                     <div>
                       <h4 class="h5">Our Address</h4>
                       <p class="contact-info-desc">
-                        10845 Griffith Peak Dr, <br />
-                        Las Vegas, NV 89135 <br />
-                        Dallas, USA
+                        707 The Silver Yard <br />100 Moor Street Queensway, <br />B4 6GF, Birmingham.
                       </p>
                     </div>
                   </div>
